css/carousel.css
/* GLOBAL STYLES
-------------------------------------------------- */
/* Padding below the footer and lighter body text */

body {
  padding-bottom: 40px;
  color: #5a5a5a;
  background-image: url("../img/starsbackground.png");
  background-size: cover;
  background-attachment: fixed;
}

/* CUSTOMIZE THE NAVBAR
------------------------------------------------- */
.btn{
  margin:8px 2px; /*Change to alter position of social media icons within navbar */
}
.navbar-brand{
  padding:11px 2px 0 0;
}

/* CUSTOMIZE THE CAROUSEL
-------------------------------------------------- */

/* Carousel base class */
.carousel {
  height: 500px;
}
/* Since positioning the image, we need to help out the caption */
.carousel-caption {
  z-index: 10;
}

/* Declare heights because of positioning of img element */
.carousel .item {
  height: 500px;
  background-color: black;
}
.carousel-inner > .item > img {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  height: auto;
  min-height: 500px;
}

.carousel-inner > .item > video {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  height: 500px;
}


/* MARKETING CONTENT
-------------------------------------------------- */

/* Center align the text within the three columns below the carousel */
.marketing .col-lg-4 {
  margin-bottom: 20px;
  text-align: center;
}
.marketing h2 {
  font-weight: normal;
}
.marketing .col-lg-4 p {
  margin-right: 10px;
  margin-left: 10px;
}

.row {
  background-color: white;
}

.holding-box {
  background-color: white;
  width: 100%;
  padding: 20px 0 20px;
}

.container-fluid {
  padding: 0;
}




/* Featurettes
------------------------- */

.featurette-divider {
  margin: 80px 0; /* Space out the Bootstrap <hr> more */
  border-color:rgba(100,100,100,0); /*Sets featurette divider line to white transparent*/
}

/* Thin out the marketing headings */
.featurette-heading {
  font-weight: 300;
  line-height: 1;
  letter-spacing: -1px;
}

/* COMMITTEE SECTION
-------------------------------------------------*/
.holding-box-title {
  margin-bottom: 20px;
}

.com-name{
  margin:0 0 20px 0;
}


/* RESPONSIVE CSS
-------------------------------------------------- */
@media (min-width: 320px) {
  .row {
    width: 100%;
    margin: auto;
  }
}

@media (min-width: 768px) {
  /* Bump up size of carousel content */
  .carousel-caption p {
    margin-bottom: 20px;
    font-size: 21px;
    line-height: 1.4;
  }

  .featurette-heading {
    font-size: 50px;
  }

  .row {
    margin: 0 auto;
    width: 750px;
  }
}

@media (min-width: 992px) {
  .featurette-heading {
    margin-top: 120px;
  }
  .row {
    width: 970px;
  }
}

@media (min-width: 1200px) {
  .row {
    width: 1170px;
  }
}

